fix: last element hidden

--- a/app/globals.css
+++ b/app/globals.css
@@ -2,17 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
-
 html,
 body,
-:root
-{
- height: 100%;
- max-height: screen;
- background-color: black;
- color-scheme: dark;
- scrollbar-color: rgb(50, 50, 50) rgb(30, 30, 30);
-
-   
+:root {
+  height: 100%;
+  max-height: screen;
+  background-color: black;
+  color-scheme: dark;
+  scrollbar-color: rgb(50, 50, 50) rgb(30, 30, 30);
 }
-
